30 August 2007: Wouter
	- fixup override date config option.
	- config options to control memory usage.

29 August 2007: Wouter
	- test tool to sign rrsets for testing validator with.
	- added RSA and DSA test keys, public and private pairs, 512 bits.
	- default configuration is with validation enabled.
	  Only a trust-anchor needs to be configured for DNSSEC to work.
	- do not convert to DER for DSA signature verification.
	- validator replay test file, for a DS to DNSKEY DSA key prime and
	  positive response.

28 August 2007: Wouter
	- removed double use for udp buffers, that could fail,
	  instead performs a malloc to do the backup.
	- validator validates referral messages, by validating all the rrsets
	  and stores the rrsets in the cache. Further referral (nonRD queries)
	  replies are made from the rrset cache directly. Unless unchecked
	  rrsets are encountered, there are then validated.
	- enforce that signing is done by a parent domain (or same domain).
	- adjust TTL downwards if rrset TTL bigger than signature allows.
	- permissive mode feature, sets AD bit for secure, but bogus does
	  not give servfail (bogus is changed into indeterminate).
	- optimization of rrset verification. rr canonical sorting is reused,
	  for the same rrset. canonical rrset image in buffer is reused for
	  the same signature.
	- if the rrset is too big (64k exactly + large owner name) the
	  canonicalization routine will fail if it does not fit in buffer.
	- faster verification for large sigsets.
	- verb_detail mode reports validation failures, but not the entire
	  algorithm for validation. Key prime failures are reported as 
	  verb_ops level.

27 August 2007: Wouter
	- do not garble the edns if a cache answer fails.
	- answer norecursive from cache if possible.
	- honor clean_additional setting when returning secure non-recursive
	  referrals.
	- do not store referral in msg cache for nonRD queries.
	- store verification status in the rrset cache to speed up future